tests/semantic_errors/sasha85_4.tl
-- test case 85.
-- Description : for cycles, type mismatch in the assignment.

-- Expected : '4'
require "ifj21" 
function main(iterations : number )      
    local a : integer = 10               
    for i=0, 20, true do                 
    end                                  
end                                      
main("helloo")                         

